<resources>
    <string name="app_name">MyApp</string>
    <string name="login">Login</string>
    <string name="pass">Password</string>
    <string name="title">Test App</string>
    <string name="input_msg">Entrez votre login et mot de passe :</string>
    <string name="btn_msg">Se Connecter</string>
    <string name="succes_msg"> </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
